# PrefixGrouper

./: README.md  pyproject.toml
examples/qwen2_5_vl/: modeling_qwen2_5_vl.py
i18n/: README_zh-hans.md
src/prefix_grouper/: __init__.py  forward.py  function.py  info.py
src/prefix_grouper/utils/: mask.py  register_transformers.py  typing.py
tests/equivalence/: test_qwen2_5_vl.py
tests/test_inputs/captions/: video1.json  video2.json
