[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prefix_grouper"
version = "0.0.1rc1"
description = "An efficient GRPO training util."
readme = "README.md"
authors = [{ name = "Zikang Liu", email = "liuzikang0625@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/johncaged/PrefixGrouper"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["prefix_grouper", "prefix_grouper.*"]
